gcc/testsuite/gdc.test/compilable/imports/test10375a.d
module imports.test10375a;

private template Pack(T...)
{
    alias T tuple;
}
